--- a/src/flexbox/styles/header.css
+++ b/src/flexbox/styles/header.css
@@ -54,7 +54,7 @@
         display: block;
         height: 24px;
         width: 24px;
-        background: url(../images/hamburger.png) center no-repeat;
+        background: url(../../images/hamburger.png) center no-repeat;
         border: none;
         margin-top: 25px;
         margin-right: 50px;
